Footer: all 9 services, correct slugs, tighter spacing
Services list: add Quantum Computing, Mobile Application, Web and Mobile Hosting,
Software Consulting. Fix wrong slugs (dev-sec-ops, cloud-service-and-storage).
Reduce newsletter wrapper top padding 100 to 60px.
Reduce footer-widget-wrapper padding 90/120 to 50/80px.
Quick Links: Contact Us already points to /contact (correct).

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -7563,7 +7563,7 @@ p.sticky-label {
 }
 
 .footer-widget-wrapper {
-  padding: 90px 0 120px;
+  padding: 50px 0 80px;
 }
 
 .footer-widget-wrapper .single-footer-widget {
@@ -7713,7 +7713,7 @@ p.sticky-label {
 }
 
 .footer-newsletter-wrapper-2 {
-  padding: 100px 0 0;
+  padding: 60px 0 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -10132,13 +10132,13 @@ h3.service-header-5 {
 
 @media (max-width: $breakpoint-md) {
   .footer-widget-wrapper {
-    padding: 70px 0 100px;
+    padding: 40px 0 60px;
   }
 }
 
 @media (max-width: $breakpoint-sm) {
   .footer-widget-wrapper {
-    padding: 50px 0 80px;
+    padding: 30px 0 50px;
   }
 }
 
